--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "firebase": "^10.9.0",
     "http": "^0.0.1-security",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
