--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
+    "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
     "react-loader-spinner": "^6.1.6",
