--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "firebase-admin": "^12.0.0",
     "lodash": "^4.17.21",
     "node-cron": "^3.0.3",
+    "react-datepicker": "^6.6.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
