--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "firebase-admin": "^12.0.0",
+    "https": "^1.0.0",
     "lodash": "^4.17.21",
     "node-cron": "^3.0.3",
     "react-datepicker": "^6.6.0",
